# google-messages-desktop

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: build-and-release.yml
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
